--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_TOKEN=7508042563:AAHe8fMU7YU3Wzys6N4DXAgbCbrNLd4mxpc
-ADMIN_ID=6448909987
+API_TOKEN=telegram_bot_token
+ADMIN_ID=telegram_user_id
